@@ -2,42 +2,46 @@ package com.dat3m.dartagnan.encoding;
 
 import com.dat3m.dartagnan.configuration.Arch;
 import com.dat3m.dartagnan.configuration.Property;
+import com.dat3m.dartagnan.expression.type.TypeFactory;
 import com.dat3m.dartagnan.program.Program;
 import com.dat3m.dartagnan.program.Thread;
 import com.dat3m.dartagnan.program.analysis.ExecutionAnalysis;
-import com.dat3m.dartagnan.program.analysis.LoopAnalysis;
 import com.dat3m.dartagnan.program.analysis.alias.AliasAnalysis;
+import com.dat3m.dartagnan.program.event.Event;
+import com.dat3m.dartagnan.program.event.MemoryEvent;
 import com.dat3m.dartagnan.program.event.Tag;
 import com.dat3m.dartagnan.program.event.core.*;
 import com.dat3m.dartagnan.program.event.metadata.MemoryOrder;
-import com.dat3m.dartagnan.program.specification.AbstractAssert;
 import com.dat3m.dartagnan.wmm.Relation;
 import com.dat3m.dartagnan.wmm.Wmm;
 import com.dat3m.dartagnan.wmm.analysis.RelationAnalysis;
 import com.dat3m.dartagnan.wmm.axiom.Axiom;
-import com.dat3m.dartagnan.wmm.relation.RelationNameRepository;
-import com.dat3m.dartagnan.wmm.utils.Tuple;
+import com.dat3m.dartagnan.wmm.utils.graph.EventGraph;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.sosy_lab.common.configuration.InvalidConfigurationException;
-import org.sosy_lab.java_smt.api.*;
+import org.sosy_lab.java_smt.api.BooleanFormula;
+import org.sosy_lab.java_smt.api.BooleanFormulaManager;
+import org.sosy_lab.java_smt.api.Formula;
+import org.sosy_lab.java_smt.api.IntegerFormulaManager;
 
 import java.util.*;
 import java.util.function.BiFunction;
-import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import static com.dat3m.dartagnan.configuration.Property.*;
-import static com.dat3m.dartagnan.program.Program.SourceLanguage.LITMUS;
-import static com.dat3m.dartagnan.wmm.relation.RelationNameRepository.CO;
+import static com.dat3m.dartagnan.program.Program.SourceLanguage.LLVM;
+import static com.dat3m.dartagnan.program.Program.SpecificationType.ASSERT;
+import static com.dat3m.dartagnan.wmm.RelationNameRepository.CO;
+import static com.dat3m.dartagnan.encoding.EncodingContext.ConversionMode.LEFT_TO_RIGHT;
 
 public class PropertyEncoder implements Encoder {
 
     private static final Logger logger = LogManager.getLogger(PropertyEncoder.class);
+    private static final TypeFactory types = TypeFactory.getInstance();
 
     private final EncodingContext context;
     private final Program program;
@@ -61,7 +65,7 @@ public class PropertyEncoder implements Encoder {
        Since we encode a lot of potential violations, and we want to trace back which one lead to
        our query being SAT, we use trackable formulas.
      */
-    private static class TrackableFormula {
+    public static class TrackableFormula {
         private final BooleanFormula trackingLiteral;
         private final BooleanFormula trackedFormula;
 
@@ -98,19 +102,23 @@ public class PropertyEncoder implements Encoder {
     public BooleanFormula encodeProperties(EnumSet<Property> properties) {
         Property.Type specType = Property.getCombinedType(properties, context.getTask());
         if (specType == Property.Type.MIXED) {
-            final String error = String.format(
+            final String warn = String.format(
                     "The set of properties %s are of mixed type (safety and reachability properties). " +
-                            "Cannot encode mixed properties into a single SMT-query.", properties);
-            throw new IllegalArgumentException(error);
+                    "Cannot encode mixed properties into a single SMT-query. " +
+                    "You can select a different set of properties with option --property. " +
+                    "Defaulting to " + Property.PROGRAM_SPEC.asStringOption() + ".",
+                    properties);
+            logger.warn(warn);
+            properties = EnumSet.of(Property.PROGRAM_SPEC);
         }
 
         BooleanFormula encoding = (specType == Property.Type.SAFETY) ?
                 encodePropertyViolations(properties) : encodePropertyWitnesses(properties);
-        if (program.getFormat().equals(LITMUS) || properties.contains(LIVENESS)) {
-            // Both litmus assertions and liveness need to identify
+        if (!program.getFormat().equals(LLVM) || properties.contains(TERMINATION)) {
+            // Both litmus assertions and termination need to identify
             // the final stores to addresses.
             // TODO Optimization: This encoding can be restricted to only those addresses
-            //  that are relevant for the specification (e.g., only variables that are used in spin loops).
+            //  that are relevant for the specification (e.g., only variables that are used in loops).
             encoding = context.getBooleanFormulaManager().and(encoding, encodeLastCoConstraints());
         }
         return encoding;
@@ -118,8 +126,8 @@ public class PropertyEncoder implements Encoder {
 
     private BooleanFormula encodePropertyViolations(EnumSet<Property> properties) {
         final List<TrackableFormula> trackableViolationEncodings = new ArrayList<>();
-        if (properties.contains(LIVENESS)) {
-            trackableViolationEncodings.add(encodeDeadlocks());
+        if (properties.contains(TERMINATION)) {
+            trackableViolationEncodings.add(encodeNontermination());
         }
         if (properties.contains(DATARACEFREEDOM)) {
             trackableViolationEncodings.add(encodeDataRaces());
@@ -149,7 +157,7 @@ public class PropertyEncoder implements Encoder {
         // Litmus (program spec). We cannot check this together with safety specs, so we make sure
         // that we do not mix them up.
         Preconditions.checkArgument(properties.contains(PROGRAM_SPEC));
-        Preconditions.checkArgument(!program.getSpecification().isSafetySpec());
+        Preconditions.checkArgument(program.hasReachabilitySpecification());
 
         final BooleanFormulaManager bmgr = context.getBooleanFormulaManager();
         final TrackableFormula progSpec = encodeProgramSpecification();
@@ -163,35 +171,36 @@ public class PropertyEncoder implements Encoder {
         final EncodingContext.EdgeEncoder coEncoder = context.edge(co);
         final RelationAnalysis.Knowledge knowledge = ra.getKnowledge(co);
         final List<Init> initEvents = program.getThreadEvents(Init.class);
-        final boolean doEncodeFinalAddressValues = program.getFormat() == LITMUS;
+        final boolean doEncodeFinalAddressValues = program.getFormat() != LLVM;
         // Find transitively implied coherences. We can use these to reduce the encoding.
-        final Set<Tuple> transCo = ra.findTransitivelyImpliedCo(co);
+        final EventGraph transCo = ra.findTransitivelyImpliedCo(co);
         // Find all writes that are never last, i.e., those that will always have a co-successor.
-        final Set<Event> dominatedWrites = knowledge.getMustSet().stream()
-                .filter(t -> exec.isImplied(t.getFirst(), t.getSecond()))
-                .map(Tuple::getFirst).collect(Collectors.toSet());
-
+        Set<Event> dominatedWrites = new HashSet<>();
+        knowledge.getMustSet().apply((e1, e2) -> {
+            if (exec.isImplied(e1, e2)) {
+                dominatedWrites.add(e1);
+            }
+        });
         // ---- Construct encoding ----
         List<BooleanFormula> enc = new ArrayList<>();
-        final Function<Event, Collection<Tuple>> out = knowledge.getMayOut();
+        Map<Event, Set<Event>> out = knowledge.getMaySet().getOutMap();
         for (Store w1 : program.getThreadEvents(Store.class)) {
             if (dominatedWrites.contains(w1)) {
-                enc.add(bmgr.not(lastCoVar(w1)));
+                enc.add(bmgr.not(context.lastCoVar(w1)));
                 continue;
             }
             BooleanFormula isLast = context.execution(w1);
             // ---- Find all possibly overwriting writes ----
-            for (Tuple coEdge : out.apply(w1)) {
-                if (transCo.contains(coEdge)) {
+            for (Event w2 : out.getOrDefault(w1, Set.of())) {
+                if (transCo.contains(w1, w2)) {
                     // We can skip the co-edge (w1,w2), because there will be an intermediate write w3
                     // that already witnesses that w1 is not last.
                     continue;
                 }
-                Event w2 = coEdge.getSecond();
-                BooleanFormula isAfter = bmgr.not(knowledge.containsMust(coEdge) ? context.execution(w2) : coEncoder.encode(coEdge));
+                BooleanFormula isAfter = bmgr.not(knowledge.getMustSet().contains(w1, w2) ? context.execution(w2) : coEncoder.encode(w1, w2));
                 isLast = bmgr.and(isLast, isAfter);
             }
-            BooleanFormula lastCoExpr = lastCoVar(w1);
+            BooleanFormula lastCoExpr = context.lastCoVar(w1);
             enc.add(bmgr.equivalence(lastCoExpr, isLast));
             if (doEncodeFinalAddressValues && Arch.coIsTotal(program.getArch())) {
                 // ---- Encode final values of addresses ----
@@ -200,8 +209,9 @@ public class PropertyEncoder implements Encoder {
                         continue;
                     }
                     BooleanFormula sameAddress = context.sameAddress(init, w1);
-                    Formula v2 = context.lastValue(init.getBase(), init.getOffset());
-                    BooleanFormula sameValue = context.equal(context.value(w1), v2);
+                    int size = types.getMemorySizeInBits(init.getValue().getType());
+                    Formula v2 = context.lastValue(init.getBase(), init.getOffset(), size);
+                    BooleanFormula sameValue = context.equal(context.value(w1), v2, LEFT_TO_RIGHT);
                     enc.add(bmgr.implication(bmgr.and(lastCoExpr, sameAddress), sameValue));
                 }
             }
@@ -214,13 +224,14 @@ public class PropertyEncoder implements Encoder {
             for (Init init : program.getThreadEvents(Init.class)) {
                 BooleanFormula lastValueEnc = bmgr.makeFalse();
                 BooleanFormula lastStoreExistsEnc = bmgr.makeFalse();
-                Formula v2 = context.lastValue(init.getBase(), init.getOffset());
+                int size = types.getMemorySizeInBits(init.getValue().getType());
+                Formula v2 = context.lastValue(init.getBase(), init.getOffset(), size);
                 BooleanFormula readFromInit = context.equal(context.value(init), v2);
                 for (Store w : program.getThreadEvents(Store.class)) {
                     if (!alias.mayAlias(w, init)) {
                         continue;
                     }
-                    BooleanFormula isLast = lastCoVar(w);
+                    BooleanFormula isLast = context.lastCoVar(w);
                     BooleanFormula sameAddr = context.sameAddress(init, w);
                     BooleanFormula sameValue = context.equal(context.value(w), v2);
                     lastValueEnc = bmgr.or(lastValueEnc, bmgr.and(isLast, sameAddr, sameValue));
@@ -232,10 +243,6 @@ public class PropertyEncoder implements Encoder {
         return bmgr.and(enc);
     }
 
-    private BooleanFormula lastCoVar(Event write) {
-        return context.getBooleanFormulaManager().makeVariable("co_last(" + write.getGlobalId() + ")");
-    }
-
     // ======================================================================
     // ======================================================================
     // ======================= Program specification ========================
@@ -244,29 +251,42 @@ public class PropertyEncoder implements Encoder {
 
     private TrackableFormula encodeProgramSpecification() {
         logger.info("Encoding program specification");
-        final AbstractAssert spec = program.getSpecification();
         final BooleanFormulaManager bmgr = context.getBooleanFormulaManager();
         // We can only perform existential queries to the SMT-engine, so for
         // safety specs we need to query for a violation (= negation of the spec)
-        final BooleanFormula encoding;
-        final BooleanFormula trackingLiteral;
-        switch (spec.getType()) {
-            case AbstractAssert.ASSERT_TYPE_FORALL:
-                encoding = bmgr.not(spec.encode(context));
-                trackingLiteral = bmgr.not(PROGRAM_SPEC.getSMTVariable(context));
-                break;
-            case AbstractAssert.ASSERT_TYPE_NOT_EXISTS:
-                encoding = spec.encode(context);
-                trackingLiteral = bmgr.not(PROGRAM_SPEC.getSMTVariable(context));
-                break;
-            case AbstractAssert.ASSERT_TYPE_EXISTS:
-                encoding = spec.encode(context);
-                trackingLiteral = PROGRAM_SPEC.getSMTVariable(context);
-                break;
-            default:
-                throw new IllegalStateException("Unrecognized program specification: " + spec.toStringWithType());
+        BooleanFormula encoding = switch (program.getSpecificationType()) {
+            case EXISTS, NOT_EXISTS -> context.encodeFinalExpressionAsBoolean(program.getSpecification());
+            case FORALL -> bmgr.not(context.encodeFinalExpressionAsBoolean(program.getSpecification()));
+            case ASSERT -> {
+                // User-placed assertions inside C code.
+                List<BooleanFormula> assertionsHold = new ArrayList<>();
+                for (Assert assertion : program.getThreadEvents(Assert.class)) {
+                    assertionsHold.add(bmgr.implication(context.execution(assertion),
+                            context.encodeExpressionAsBooleanAt(assertion.getExpression(), assertion)));
+                }
+                yield bmgr.not(bmgr.and(assertionsHold));
+            }
+        };
+        BooleanFormula trackingLiteral = switch (program.getSpecificationType()) {
+            case FORALL, NOT_EXISTS, ASSERT -> bmgr.not(PROGRAM_SPEC.getSMTVariable(context));
+            case EXISTS -> PROGRAM_SPEC.getSMTVariable(context);
+        };
+        if (!ASSERT.equals(program.getSpecificationType())) {
+            encoding = bmgr.and(encoding, encodeProgramTermination());
         }
         return new TrackableFormula(trackingLiteral, encoding);
+    }
+
+    private BooleanFormula encodeProgramTermination() {
+        final BooleanFormulaManager bmgr = context.getBooleanFormulaManager();
+        final BooleanFormula exitReached = bmgr.and(program.getThreads().stream()
+                .map(t -> bmgr.equivalence(context.execution(t.getEntry()), context.execution(t.getExit())))
+                .toList());
+        final BooleanFormula terminated = program.getThreadEventsWithAllTags(Tag.NONTERMINATION).stream()
+                .map(CondJump.class::cast)
+                .map(jump -> bmgr.not(context.jumpTaken(jump)))
+                .reduce(bmgr.makeTrue(), bmgr::and);
+        return bmgr.and(exitReached, terminated);
     }
 
     // ======================================================================
@@ -284,7 +304,7 @@ public class PropertyEncoder implements Encoder {
         final EncodingContext ctx = this.context;
         final Wmm memoryModel = this.memoryModel;
         final List<Axiom> flaggedAxioms = memoryModel.getAxioms().stream()
-                .filter(Axiom::isFlagged).collect(Collectors.toList());
+                .filter(Axiom::isFlagged).toList();
 
         if (flaggedAxioms.isEmpty()) {
             logger.info("No CAT specification in the WMM. Skipping encoding.");
@@ -380,136 +400,9 @@ public class PropertyEncoder implements Encoder {
     // ======================================================================
     // ======================================================================
 
-    private TrackableFormula encodeDeadlocks() {
-        logger.info("Encoding dead locks");
-        return new LivenessEncoder().encodeDeadlocks();
+    private TrackableFormula encodeNontermination() {
+        final BooleanFormula hasNontermination = new NonTerminationEncoder(context.getTask(), context).encodeNontermination();
+        return new TrackableFormula(context.getBooleanFormulaManager().not(TERMINATION.getSMTVariable(context)), hasNontermination);
     }
 
-    /*
-        Encoder for the liveness property.
-
-        We have a liveness violation in some execution if
-            - At least one thread is stuck inside a loop (*)
-            - All other threads are either stuck or terminated normally (**)
-
-        (*) A thread is stuck if it finishes a loop iteration
-            - without causing side-effects (e.g., visible stores)
-            - while reading only from co-maximal stores
-        => Without external help, a stuck thread will never be able to exit the loop.
-
-        (**) A thread terminates normally IFF it does not terminate early (denoted by EARLYTERMINATION-tagged jumps)
-             due to e.g.,
-            - violating an assertion
-            - reaching the loop unrolling bound
-            - side-effect-free spinning
-
-        NOTE: The definition of "stuck" is under-approximate: there are cases where a thread can actually be
-        in a deadlock without satisfying the stated conditions (e.g., while producing side effects).
-        Reasoning about such cases is more involved.
-    */
-    private class LivenessEncoder {
-
-        private class SpinIteration {
-            public final List<Load> containedLoads = new ArrayList<>();
-            // Execution of the <boundJump> means the loop performed a side-effect-free
-            // iteration without exiting. If such a jump is executed + all loads inside the loop
-            // were co-maximal, then we have a deadlock condition.
-            public final List<CondJump> spinningJumps = new ArrayList<>();
-        }
-
-        public TrackableFormula encodeDeadlocks() {
-            final Program program = PropertyEncoder.this.program;
-            final EncodingContext context = PropertyEncoder.this.context;
-            final BooleanFormulaManager bmgr = context.getBooleanFormulaManager();
-            final LoopAnalysis loopAnalysis = LoopAnalysis.newInstance(program);
-
-            // Find spin loops of all threads
-            final Map<Thread, List<SpinIteration>> spinloopsMap =
-                    Maps.toMap(program.getThreads(), t -> this.findSpinLoopsInThread(t, loopAnalysis));
-            // Compute "stuckness" encoding for all threads
-            final Map<Thread, BooleanFormula> isStuckMap = Maps.toMap(program.getThreads(),
-                    t -> this.generateStucknessEncoding(spinloopsMap.get(t), context));
-
-            // Deadlock <=> allStuckOrDone /\ atLeastOneStuck
-            BooleanFormula allStuckOrDone = bmgr.makeTrue();
-            BooleanFormula atLeastOneStuck = bmgr.makeFalse();
-            for (Thread thread : program.getThreads()) {
-                final BooleanFormula isStuck = isStuckMap.get(thread);
-                final BooleanFormula isTerminatingNormally = thread
-                        .getEvents().stream()
-                        .filter(e -> e.hasTag(Tag.EARLYTERMINATION))
-                        .map(CondJump.class::cast)
-                        .map(j -> bmgr.not(bmgr.and(context.execution(j), context.jumpCondition(j))))
-                        .reduce(bmgr.makeTrue(), bmgr::and);
-
-                atLeastOneStuck = bmgr.or(atLeastOneStuck, isStuck);
-                allStuckOrDone = bmgr.and(allStuckOrDone, bmgr.or(isStuck, isTerminatingNormally));
-            }
-
-            final BooleanFormula hasDeadlock = bmgr.and(allStuckOrDone, atLeastOneStuck);
-            return new TrackableFormula(bmgr.not(LIVENESS.getSMTVariable(context)), hasDeadlock);
-        }
-
-        // Compute "stuckness": A thread is stuck if it reaches a spin loop bound event
-        // while only reading from co-maximal stores.
-        private BooleanFormula generateStucknessEncoding(List<SpinIteration> loops, EncodingContext context) {
-            final BooleanFormulaManager bmgr = context.getBooleanFormulaManager();
-            final RelationAnalysis ra = PropertyEncoder.this.ra;
-            final Relation rf = memoryModel.getRelation(RelationNameRepository.RF);
-            final EncodingContext.EdgeEncoder rfEncoder = context.edge(rf);
-            final Function<Event, Collection<Tuple>> rfMayIn = ra.getKnowledge(rf).getMayIn();
-
-            if (loops.isEmpty()) {
-                return bmgr.makeFalse();
-            }
-
-            BooleanFormula isStuck = bmgr.makeFalse();
-            for (SpinIteration loop : loops) {
-                BooleanFormula allLoadsAreCoMaximal = bmgr.makeTrue();
-                for (Load load : loop.containedLoads) {
-                    final BooleanFormula readsCoMaximalStore = rfMayIn.apply(load).stream()
-                            .map(rfEdge -> bmgr.and(rfEncoder.encode(rfEdge), lastCoVar(rfEdge.getFirst())))
-                            .reduce(bmgr.makeFalse(), bmgr::or);
-                    final BooleanFormula isCoMaximalLoad = bmgr.implication(context.execution(load), readsCoMaximalStore);
-                    allLoadsAreCoMaximal = bmgr.and(allLoadsAreCoMaximal, isCoMaximalLoad);
-                }
-                // Note that we assume (for now) that a SPINLOOP-tagged jump is executed only if the loop iteration
-                // was side-effect free.
-                final BooleanFormula isSideEffectFree = loop.spinningJumps.stream()
-                        .map(j -> bmgr.and(context.execution(j), context.jumpCondition(j)))
-                        .reduce(bmgr.makeFalse(), bmgr::or);
-                isStuck = bmgr.or(isStuck, bmgr.and(isSideEffectFree, allLoadsAreCoMaximal));
-            }
-            return isStuck;
-        }
-
-        private List<SpinIteration> findSpinLoopsInThread(Thread thread, LoopAnalysis loopAnalysis) {
-            final List<LoopAnalysis.LoopInfo> loops = loopAnalysis.getLoopsOfFunction(thread);
-            final List<SpinIteration> spinIterations = new ArrayList<>();
-
-            for (LoopAnalysis.LoopInfo loop : loops) {
-                for (LoopAnalysis.LoopIterationInfo iter : loop.iterations()) {
-                    final List<Event> iterBody = iter.computeBody();
-                    final List<CondJump> spinningJumps = iterBody.stream()
-                            .filter(e -> e instanceof CondJump && e.hasTag(Tag.SPINLOOP))
-                            .map(CondJump.class::cast)
-                            .toList();
-
-                    if (!spinningJumps.isEmpty()) {
-                        final List<Load> loads = iterBody.stream()
-                                .filter(Load.class::isInstance)
-                                .map(Load.class::cast)
-                                .toList();
-
-                        final SpinIteration spinIter = new SpinIteration();
-                        spinIter.spinningJumps.addAll(spinningJumps);
-                        spinIter.containedLoads.addAll(loads);
-                        spinIterations.add(spinIter);
-                    }
-                }
-            }
-
-            return spinIterations;
-        }
-    }
 }
